--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,3 +3,7 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 @import "./variables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "./bootswatch";
+
+body {
+    background: #f2f2f2;
+}
