--- a/src/components/Block.scss
+++ b/src/components/Block.scss
@@ -1,14 +1,95 @@
+@import "../sass/variables";
+
 .block {
+    $border-color: #999;
+    border-radius: 2px;
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: $block-icon-size*1.5 1fr;
+    grid-column-gap: 10px;
+    margin: $block-icon-size/4 0;
+    position: relative;
 
-    &__heading {
-        display: flex;
+    &__icon {
+        border: solid 1px $border-color;
+        border-radius: 50%;
+        font-size: 1.1rem;
+        height: $block-icon-size;
+        line-height: $block-icon-size;
+        position: relative;
+        text-align: center;
+        width: $block-icon-size;
 
-        &__num {
-            flex: 4;
+        &:after {
+            content: "";
+            border-top: solid 1px $border-color;
+            display: block;
+            position: absolute;
+            left: 100%;
+            top: 50%;
+            width: $block-icon-size/2;
         }
-        &__time {
-            flex: 1;
-            text-align: right;
+    }
+    &__number {
+        font-weight: 400;
+        font-size: 1rem;
+        line-height: $block-icon-size;
+        margin-bottom: -0.5rem;
+
+        &:after {
+            background: #fff;
+            border-left: solid 1px #ccc;
+            border-bottom: solid 1px #ccc;
+            content: "";
+            display: none;
+            height: 10px;
+            position: absolute;
+            right: -35px;
+            transform: rotate(45deg);
+            top: 14px;
+            width: 10px;
+            z-index: 2;
         }
+    }
+    &__hash {
+        font-weight: 300;
+    }
+    &:after {
+        content: "";
+        position: absolute;
+        left: $block-icon-size / 2;
+        top: $block-icon-size;
+        bottom: -$block-icon-size/4;
+        border-right: dotted 2px #ccc;
+    }
+
+    &:last-child:after {
+        display: none;
+    }
+    &:hover &__icon {
+        background-color: #fff;
+    }
+    &:hover &__number:after {
+        display: block;
+    }
+
+    &--active &__icon {
+        background-color: #fff;
+        border-color: $link-color;
+        color: $link-color;
+
+        &:after {
+            border-color: $link-color;
+        }
+    }
+    &--active &__number {
+        font-weight: bold;
+    }
+    &--active &__hash {
+        font-weight: 400;
+    }
+    &--active .block-summary,
+    .block-summary:hover {
+        color: $link-color;
     }
 }
