--- a/src/components/Block.scss
+++ b/src/components/Block.scss
@@ -1,8 +1,6 @@
 @import "../sass/variables";
 
 .block {
-    $border-color: #999;
-    border-radius: 2px;
     cursor: pointer;
     display: grid;
     grid-template-columns: $block-icon-size*1.5 1fr;
@@ -11,7 +9,7 @@
     position: relative;
 
     &__icon {
-        border: solid 1px $border-color;
+        border: solid 1px $block-border-color;
         border-radius: 50%;
         font-size: 1.1rem;
         height: $block-icon-size;
@@ -22,7 +20,7 @@
 
         &:after {
             content: "";
-            border-top: solid 1px $border-color;
+            border-top: solid 1px $block-border-color;
             display: block;
             position: absolute;
             left: 100%;
@@ -57,15 +55,14 @@
     &:after {
         content: "";
         position: absolute;
+        height: $block-icon-size / 2;
         left: $block-icon-size / 2;
         top: $block-icon-size;
-        bottom: -$block-icon-size/4;
         border-right: dotted 2px #ccc;
     }
-
-    &:last-child:after {
-        display: none;
-    }
+    // &:last-child:after {
+    //     display: none;
+    // }
     &:hover &__icon {
         background-color: #fff;
     }
